--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -2,7 +2,7 @@
         <div class="p-3 mb-3 bg-light rounded">
           <h4 class="font-italic">About</h4>
           <p class="mb-0">
-            Hey, this is n00p
+            Hey, this is {{site.username}}
           </p>
         </div>
 
