--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
   <footer class="blog-footer">
-    <p><a href='#'>n00p </a> ❤ 2018</p>
+    <p><a href='{{site.footer_url}}'>{{site.author}} </a> ❤ 2016 - 2018</p>
     <p>
-      
+      Hit the lights
     </p>
   </footer>
