--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="{{site.author}}">
+  <meta name="author" content="{{site.username}}">
   <link rel="icon" href="../../../../favicon.ico">
 
-  <title>{{site.title}}</title>
+  <title>{{site.author}} - Hit the lights </title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
