--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,13 +1,16 @@
       <aside class="col-md-4 blog-sidebar">
         <div class="p-3 mb-3 bg-light rounded">
           <h4 class="font-italic">About</h4>
-          <p class="mb-0">
-            Hey, this is {{site.username}}
-          </p>
+          <p class="mb-0">Hey, this is {{site.author}}, an idealist & a visionary, <br>
+          	who is crazy about *nix & coding.  <br>
+            In spare time, I keen on cycling & film. And...<br>
+            I need another story.</p>
         </div>
 
+        <!-- commented
         <div class="p-3">
           <h4 class="font-italic">Archives</h4>
+
           <ol class="list-unstyled mb-0">
             <li><a href="#">March 2014</a></li>
             <li><a href="#">February 2014</a></li>
@@ -22,14 +25,15 @@
             <li><a href="#">May 2013</a></li>
             <li><a href="#">April 2013</a></li>
           </ol>
-        </div>
+
+
+        </div> -->
+
 
         <div class="p-3">
           <h4 class="font-italic">Elsewhere</h4>
           <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="https://github.com/{{site.github_username}}" target="_blank">GitHub</a></li>
           </ol>
         </div>
       </aside><!-- /.blog-sidebar -->
