--- a/_includes/js_plugin.html
+++ b/_includes/js_plugin.html
@@ -59,11 +59,11 @@
 	
 	const gitment = new Gitment({
   id: 'Your page ID', // optional
-  owner: 'Your GitHub ID',
-  repo: 'The repo to store comments',
+  owner: 'n00pme',
+  repo: 'n00pme.github.io',
   oauth: {
-    client_id: 'Your client ID',
-    client_secret: 'Your client secret',
+    client_id: '0e060b81340ea5305377',
+    client_secret: '38ff8a80a7df8ce635da3c10df61ba4419693a17',
   },
   // ...
   // For more available options, check out the documentation below
