--- a/_includes/js_plugin.html
+++ b/_includes/js_plugin.html
@@ -58,7 +58,7 @@
 <script type="text/javascript">
 	
 	const gitment = new Gitment({
-  id: 'Your page ID', // optional
+  id: '1', // optional
   owner: 'n00pme',
   repo: 'n00pme.github.io',
   oauth: {
