--- a/_includes/js_plugin.html
+++ b/_includes/js_plugin.html
@@ -51,7 +51,7 @@
 
 
 <!-- comment -->
-
+<div id='comments'></div> 
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 
