--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,28 @@ layout: default
 				</div>
 				
 			</div><!-- /.blog-post -->
+			
+			<!-- comment -->
+			<div id='comments'>this is comments</div> 
+			<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+			<script src="{{site.baseurl}}/dist/js/gitment.browser.js"></script>
+
+			<script type="text/javascript">
+
+				const gitment = new Gitment({
+					owner: 'n00pme',
+					repo: 'n00pme.github.io',
+					oauth: {
+						client_id: '0e060b81340ea5305377',
+						client_secret: '38ff8a80a7df8ce635da3c10df61ba4419693a17',
+					},
+
+				})
+				gitment.render('comments')
+
+			</script>
+
+			
 		</div><!-- /.blog-main -->
 
 		{% include aside.html %}
