--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,6 +47,7 @@ layout: default
 			<script type="text/javascript">
 
 				const gitment = new Gitment({
+					id: window.location.pathname,
 					owner: 'n00pme',
 					repo: 'n00pme.github.io',
 					oauth: {
